<resources>
    <string name="app_name">Midnight Dhikr</string>
    <string name="Dzikirpagi">DzikirPagi</string>
    <string name="DzikirPetang">DzikirPetang</string>
    <string name="DzikirSolat">DzikirSolat</string>
    <string name="about">about</string>
</resources>