<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="#000"/>

    <ImageView
        android:layout_width="164dp"
        android:layout_height="169dp"
        android:layout_margin="20dp"
        android:src="@drawable/quran"

        />


    <Button
        android:id="@+id/dzikirPagi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Dzikirpagi"
        />
    <Button
        android:id="@+id/dzikirPetang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/DzikirPetang"/>

    <Button
        android:id="@+id/dzikirSholat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/DzikirSolat"/>
    <Button
        android:id="@+id/tentang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about"/>

</LinearLayout>